--- a/MikroStok.ES.Core/MikroStok.ES.Core.csproj
+++ b/MikroStok.ES.Core/MikroStok.ES.Core.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="4.9.4" />
       <PackageReference Include="Marten" Version="3.9.0" />
     </ItemGroup>
 
