--- a/MikroStok.Domain/MikroStok.Domain.csproj
+++ b/MikroStok.Domain/MikroStok.Domain.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="Aggregates" />
       <Folder Include="Queries" />
     </ItemGroup>
 
